--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ script:
   - make run_built_tests
 
 before_install:
-  - sudo apt-get install libffi-dev libuv-dev
+  - sudo apt-get install libffi-dev libuv
 
 os:
   - osx
