--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ before_install:
   - sudo apt-add-repository ppa:linuxjedi/ppa -y
   - sudo apt-get update -qq
   - sudo apt-get update
-  - sudo apt-get install libffi-dev libuv
+  - sudo apt-get install libffi-dev libuv-dev
 
 os:
   - osx
