--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 
 script:
-  - make PYTHON=python build_preload_with_jit
+  - make PYTHON=python build_with_jit
   - make run_built_tests
 
 before_install:
