--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
 
 matrix:
   fast_finish: true 
+  allow_failures:
+    - TARGET_OPTS='target_preload.py'
 
 script:
   - make PYTHON=python build
