--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ script:
   - make run_built_tests
 
 before_install:
-  - sudo apt-get install libffi-dev libedit-dev
+  - sudo apt-get install libffi-dev libedit-dev libboost-all-dev
 
 notifications:
   irc: "chat.freenode.net#pixie-lang"
