use travis apt replacement

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,14 @@ script:
   - make compile_tests
   - make run_built_tests
 
-before_install:
-        - sudo apt-get install libffi-dev libedit-dev libboost-all-dev zlib1g-dev zlib-bin
+addons:
+  apt:
+    packages:
+      - libffi-dev
+      - libedit-dev
+      - libboost-all-dev
+      - zlib1g-dev
+      - zlib-bin
 
 notifications:
   irc: "chat.freenode.net#pixie-lang"
